--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "lint": "ng lint",
+    "lint": "ng lint --fix",
     "build:client-and-server-bundles": "ng build --prod && ng run ng-universal-demo:server:production",
     "build:prerender": "npm run build:client-and-server-bundles && npm run webpack:server && npm run generate:prerender",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
@@ -44,8 +44,11 @@
     "@nguniversal/common": "^6.0.0",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@types/express": "^4.11.1",
+    "@types/request": "^2.47.0",
     "core-js": "^2.4.1",
-    "rxjs": "6.0.0",
+    "js-cookie": "^2.2.0",
+    "rxjs": "^6.0.0",
     "webpack-cli": "^2.0.14",
     "zone.js": "^0.8.26"
   },
@@ -54,6 +57,7 @@
     "@angular/cli": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/language-service": "6.0.0",
+    "@types/js-cookie": "^2.1.0",
     "@types/node": "^8.0.30",
     "codelyzer": "^4.0.2",
     "cpy-cli": "^1.0.1",
